# flask-project

./: .gitignore
flask-project/: README.md  pyproject.toml
flask-project/flask_project/: app.py  mysql_connection.py
