[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["vidhya131 <{email}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
flask = "^3.0.3"
pymysql = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
